// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderComponent > should render a component 1`] = `
"
import { defineComponent, ref, h, VNodeData, PropType } from 'vue';
import { isVue2 } from '../../utils/vue';
import { handleVue3Props } from '../../utils/ssr';
import { registerExampleComponent } from '@vonage/vivid';
import { registerComponent } from '../../utils/register';
import { IconId } from '../icons';
import { isRemoveRequest } from '../../utils/slottableRequest';
import { handleNamedSlotV2, handleNamedSlotV3 } from '../../utils/slots';
import type { VwcExampleComponentElement } from '@vonage/vivid';
import type { SlottableRequestEvent } from '../../utils/slottableRequest';


/**
 * This is an example component
 */
export default defineComponent({
  name: 'VExampleComponent',
  
  model: isVue2 ? {
    prop: 'modelValue',
    event: 'update:modelValue'
  } : undefined,
  props: { /**
 * This is an example prop
 */
        exampleProp: {type: String as PropType<string>, default: undefined},
/**
 * This is an example prop
 */
        sameEvent: {type: String as PropType<string>, default: undefined},

        typeUnion: {type: [String, Number] as PropType<string | number>, default: undefined},

        iconType: {type: String as PropType<IconId>, default: undefined},

        value: {type: String as PropType<string>, default: undefined},

        modelValue: {type: String as PropType<string>, default: undefined},

        start: {type: String as PropType<string>, default: undefined},

        forcedDomProp: {type: [String, HTMLElement] as PropType<string | HTMLElement>, default: undefined},

        booleanProp: {type: Boolean as PropType<boolean>, default: undefined}
			},
  emits: [
			
					/**
 * This is an example event
 * @type {Event}
 */
					'example-event',

					/**
 * @type {Event}
 */
					'input',

					/**
 * @type {CustomEvent<{a: string | number}>}
 */
					'input:start',

					/**
 * Fires when the modelValue value changes
 * @type {string}
 */
					'update:modelValue',

					/**
 * Fires when the sameEvent value changes
 * @type {string}
 */
					'update:sameEvent',

					/**
 * Fires when the start value changes
 * @type {string}
 */
					'update:start'],
  methods: {
  	
        /**
 * This is an example method
 */
        exampleMethod(exampleArg: string): string{ return (this.element as any)?.exampleMethod(exampleArg); }
	},
	
  setup(props, ctx) {
    const componentName = registerComponent('example-component', registerExampleComponent);

    const element = ref<VwcExampleComponentElement | null>(null);

		const slottableRequests = ref(new Map<string, { name: string; data: unknown }>());

    return { componentName, element , slottableRequests };
  },
  render() {
    
    if (isVue2) {
        return h(this.componentName, {
            ref: 'element',
            attrs: { ...((this.sameEvent ?? this.exampleProp) !== undefined ? {'example-prop': this.sameEvent ?? this.exampleProp } : {}),...((this.typeUnion) !== undefined ? {'type-union': this.typeUnion } : {}),...((this.iconType) !== undefined ? {'icon-type': this.iconType } : {}),...((this.modelValue ?? this.value) !== undefined ? {'current-value': this.modelValue ?? this.value } : {}),...((this.start) !== undefined ? {'start': this.start } : {}),...((this.booleanProp) !== undefined ? {'boolean-prop': this.booleanProp } : {}) },
            class: 'vvd-component',
            domProps: { ...((this.forcedDomProp) !== undefined ? {'forcedDomProp': this.forcedDomProp } : {}) },
            on: { 'example-event': (event: Event & {
			currentTarget: VwcExampleComponentElement
		}) => {
          
          this.$emit('example-event', event);
        },'input': (event: Event & {
			currentTarget: VwcExampleComponentElement
		}) => {
          this.$emit('update:modelValue', event.currentTarget.value);
this.$emit('update:sameEvent', event.currentTarget.exampleProp);
          this.$emit('input', event);
        },'input:start': (event: CustomEvent<{a: string | number}> & {
			currentTarget: VwcExampleComponentElement
		}) => {
          this.$emit('update:start', event.currentTarget.start);
          this.$emit('input:start', event);
        },'slottable-request': (event: SlottableRequestEvent) => {
		if (isRemoveRequest(event.data)) {
			this.slottableRequests.delete(event.slotName);
		} else {
			this.slottableRequests.set(event.slotName, { name: event.name, data: event.data });
		}
		this.$forceUpdate();
	} },
        }, [
					this.$slots.default,
// @slot example-slot This is an example slot
      handleNamedSlotV2('example-slot', this.$slots['example-slot']),// @slot no-description 
      handleNamedSlotV2('no-description', this.$slots['no-description']),
...Array.from(this.slottableRequests.entries()).flatMap(
				([slotName, { name, data }]) =>
					handleNamedSlotV2(slotName, this.$scopedSlots[name]?.(data)) ?? []
			)
        ]);
      }
      // @ts-ignore
      return h(this.componentName, {
          ref: 'element',
          class: 'vvd-component',
          ...handleVue3Props({...((this.sameEvent ?? this.exampleProp) !== undefined ? {'^example-prop': this.sameEvent ?? this.exampleProp } : {}),...((this.typeUnion) !== undefined ? {'^type-union': this.typeUnion } : {}),...((this.iconType) !== undefined ? {'^icon-type': this.iconType } : {}),...((this.modelValue ?? this.value) !== undefined ? {'^current-value': this.modelValue ?? this.value } : {}),...((this.start) !== undefined ? {'^start': this.start } : {}),...((this.forcedDomProp) !== undefined ? {'.forcedDomProp': this.forcedDomProp } : {}),...((this.booleanProp) !== undefined && (this.booleanProp) !== false ? {'^boolean-prop': this.booleanProp } : {})}),'onExampleEvent': (event: Event & {
			currentTarget: VwcExampleComponentElement
		}) => {
					 
          this.$emit('example-event', event);
        },'onInput': (event: Event & {
			currentTarget: VwcExampleComponentElement
		}) => {
					 this.$emit('update:modelValue', event.currentTarget.value);
this.$emit('update:sameEvent', event.currentTarget.exampleProp);
          this.$emit('input', event);
        },'onInput:start': (event: CustomEvent<{a: string | number}> & {
			currentTarget: VwcExampleComponentElement
		}) => {
					 this.$emit('update:start', event.currentTarget.start);
          this.$emit('input:start', event);
        },'onSlottable-request': (event: SlottableRequestEvent) => {
		if (isRemoveRequest(event.data)) {
			this.slottableRequests.delete(event.slotName);
		} else {
			this.slottableRequests.set(event.slotName, { name: event.name, data: event.data });
		}
	}
      } as unknown as VNodeData, [
          // @ts-ignore
		this.$slots.default?.(),
// @slot example-slot This is an example slot
      handleNamedSlotV3('example-slot', (this.$slots['example-slot'] as any)?.()),// @slot no-description 
      handleNamedSlotV3('no-description', (this.$slots['no-description'] as any)?.()),
...Array.from(this.slottableRequests.entries()).flatMap(
				([slotName, { name, data }]) =>
					// @ts-ignore
					handleNamedSlotV3(slotName, this.$slots[name]?.(data)) ?? []
			)
      ]);
    
  },
});
"
`;

exports[`renderComponent > should render a component as a Vue 3 stub 1`] = `
"
import { defineComponent, ref, h, VNodeData, PropType } from 'vue3';
import { isVue2 } from '../../utils/vue';
import { handleVue3Props } from '../../utils/ssr';
import { registerExampleComponent } from '@vonage/vivid';
import { registerComponent } from '../../utils/register';
import { IconId } from '../icons';
import { isRemoveRequest } from '../../utils/slottableRequest';
import { handleNamedSlotV2, handleNamedSlotV3 } from '../../utils/slots';
import type { VwcExampleComponentElement } from '@vonage/vivid';
import type { SlotsType } from 'vue3';
import type { SlottableRequestEvent } from '../../utils/slottableRequest';


/**
 * This is an example component
 */
export default defineComponent({
  name: 'VExampleComponent',
  
  model: isVue2 ? {
    prop: 'modelValue',
    event: 'update:modelValue'
  } : undefined,
  props: { /**
 * This is an example prop
 */
        exampleProp: {type: String as PropType<string>, default: undefined},
/**
 * This is an example prop
 */
        sameEvent: {type: String as PropType<string>, default: undefined},

        typeUnion: {type: [String, Number] as PropType<string | number>, default: undefined},

        iconType: {type: String as PropType<IconId>, default: undefined},

        value: {type: String as PropType<string>, default: undefined},

        modelValue: {type: String as PropType<string>, default: undefined},

        start: {type: String as PropType<string>, default: undefined},

        forcedDomProp: {type: [String, HTMLElement] as PropType<string | HTMLElement>, default: undefined},

        booleanProp: {type: Boolean as PropType<boolean>, default: undefined}
			},
  emits: {
			
				/**
 * This is an example event
 * @type {Event}
 */
				['example-event'](event: Event & {
			currentTarget: VwcExampleComponentElement
		}) { return true },

				/**
 * @type {Event}
 */
				['input'](event: Event & {
			currentTarget: VwcExampleComponentElement
		}) { return true },

				/**
 * @type {CustomEvent<{a: string | number}>}
 */
				['input:start'](event: CustomEvent<{a: string | number}> & {
			currentTarget: VwcExampleComponentElement
		}) { return true },

				/**
 * Fires when the modelValue value changes
 * @type {string}
 */
				['update:modelValue'](event: string) { return true },

				/**
 * Fires when the sameEvent value changes
 * @type {string}
 */
				['update:sameEvent'](event: string) { return true },

				/**
 * Fires when the start value changes
 * @type {string}
 */
				['update:start'](event: string) { return true }},
  methods: {
  	
        /**
 * This is an example method
 */
        exampleMethod(exampleArg: string): string{ return (this.element as any)?.exampleMethod(exampleArg); }
	},
	slots: Object as SlotsType<{
		
		/**
 * This is an example slot
 */
		"example-slot": Record<string, never>

		
		"no-description": Record<string, never>

		/**
 * This is a dynamic slot
 */
		"dynamic-slot": { data: string }

		
		"dynamic-no-description": { data: string }
	}>,
  setup(props, ctx) {
    const componentName = registerComponent('example-component', registerExampleComponent);

    const element = ref<VwcExampleComponentElement | null>(null);

		const slottableRequests = ref(new Map<string, { name: string; data: unknown }>());

    return { componentName, element , slottableRequests };
  },
  render() {
    return null;
  },
});
"
`;

exports[`renderComponent > should render a minimal component 1`] = `
"
import { defineComponent, ref, h, VNodeData } from 'vue';
import { isVue2 } from '../../utils/vue';
import { handleVue3Props } from '../../utils/ssr';
import { registerExampleComponent } from '@vonage/vivid';
import { registerComponent } from '../../utils/register';
import { handleNamedSlotV2, handleNamedSlotV3 } from '../../utils/slots';
import type { VwcExampleComponentElement } from '@vonage/vivid';



export default defineComponent({
  name: 'VExampleComponent',
  
  
  emits: [
			],
  methods: {
  	
	},
	
  setup(props, ctx) {
    const componentName = registerComponent('example-component', registerExampleComponent);

    const element = ref<VwcExampleComponentElement | null>(null);

		

    return { componentName, element  };
  },
  render() {
    
    if (isVue2) {
        return h(this.componentName, {
            ref: 'element',
            attrs: {  },
            class: 'vvd-component',
            
            on: {  },
        }, [
					this.$slots.default,

        ]);
      }
      // @ts-ignore
      return h(this.componentName, {
          ref: 'element',
          class: 'vvd-component',
          ...handleVue3Props({})
      } as unknown as VNodeData, [
          // @ts-ignore
		this.$slots.default?.(),

      ]);
    
  },
});
"
`;

exports[`renderComponent > should render minimal component as a Vue 3 stub 1`] = `
"
import { defineComponent, ref, h, VNodeData } from 'vue3';
import { isVue2 } from '../../utils/vue';
import { handleVue3Props } from '../../utils/ssr';
import { registerExampleComponent } from '@vonage/vivid';
import { registerComponent } from '../../utils/register';
import { handleNamedSlotV2, handleNamedSlotV3 } from '../../utils/slots';
import type { VwcExampleComponentElement } from '@vonage/vivid';
import type { SlotsType } from 'vue3';



export default defineComponent({
  name: 'VExampleComponent',
  
  
  emits: {
			},
  methods: {
  	
	},
	slots: Object as SlotsType<Record<string, never>>,
  setup(props, ctx) {
    const componentName = registerComponent('example-component', registerExampleComponent);

    const element = ref<VwcExampleComponentElement | null>(null);

		

    return { componentName, element  };
  },
  render() {
    return null;
  },
});
"
`;
